fix: rename align option from 'center' to 'middle'

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -37,7 +37,7 @@ $block: '.#{variables.$ns}styled-table';
                 align-content: start;
             }
 
-            &_center {
+            &_middle {
                 align-content: center;
             }
 
